fix wrap layout

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,9 +15,7 @@ html
 .container
   width: 100%
   margin-left: auto
-  // padding-left: 1.5rem
   margin-right: auto
-  padding-right: 1.5rem
   &__first-item
     margin-top: 230px
 
